회원가입, 로그인, 회원수정 폼

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -1,5 +1,10 @@
-# member
 /member/register.do = com.java.member.command.RegisterCommand
 /member/registerOk.do = com.java.member.command.RegisterOkCommand
 /member/idCheck.do = com.java.member.command.IdCheckCommand
 /member/zipcode.do = com.java.member.command.ZipcodeCommand
+/member/login.do = com.java.member.command.LoginCommand
+/member/loginOk.do = com.java.member.command.LoginOkCommand
+/member/logout.do = com.java.member.command.LogoutCommand
+/member/main.do	= com.java.member.command.MainCommand
+/member/update.do = com.java.member.command.UpdateCommand
+/member/updateOk.do = com.java.member.command.UpdateOkCommand
