회원탈퇴 기능

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -8,3 +8,5 @@
 /member/main.do	= com.java.member.command.MainCommand
 /member/update.do = com.java.member.command.UpdateCommand
 /member/updateOk.do = com.java.member.command.UpdateOkCommand
+/member/delete.do = com.java.member.command.DeleteCommand
+/member/deleteOk.do = com.java.member.command.DeleteOkCommand
