게시판 글 작성 폼

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -1,3 +1,4 @@
+#URI : /MVCHomePage/* = directory
 /member/register.do = com.java.member.command.RegisterCommand
 /member/registerOk.do = com.java.member.command.RegisterOkCommand
 /member/idCheck.do = com.java.member.command.IdCheckCommand
@@ -10,3 +11,7 @@
 /member/updateOk.do = com.java.member.command.UpdateOkCommand
 /member/delete.do = com.java.member.command.DeleteCommand
 /member/deleteOk.do = com.java.member.command.DeleteOkCommand
+
+#board
+/board/write.do = com.java.board.command.WriteCommand
+/board/writeOk.do = com.java.board.command.WriteOkCommand
