부모 게시글 작성, Rownum 쿼리 작성

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -15,3 +15,4 @@
 #board
 /board/write.do = com.java.board.command.WriteCommand
 /board/writeOk.do = com.java.board.command.WriteOkCommand
+/board/list.do = com.java.member.command.ListCommand
