--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -16,3 +16,4 @@
 /board/write.do = com.java.board.command.WriteCommand
 /board/writeOk.do = com.java.board.command.WriteOkCommand
 /board/list.do = com.java.member.command.ListCommand
+/board/read.do = com.java.board.command.ReadCommand
