답글, 답답글 기능

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -15,5 +15,5 @@
 #board
 /board/write.do = com.java.board.command.WriteCommand
 /board/writeOk.do = com.java.board.command.WriteOkCommand
-/board/list.do = com.java.member.command.ListCommand
+/board/list.do = com.java.board.command.ListCommand
 /board/read.do = com.java.board.command.ReadCommand
