글 목록 & 글 삭제

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -17,3 +17,5 @@
 /board/writeOk.do = com.java.board.command.WriteOkCommand
 /board/list.do = com.java.board.command.ListCommand
 /board/read.do = com.java.board.command.ReadCommand
+/board/delete.do = com.java.board.command.DeleteCommand
+/board/deleteOk.do = com.java.board.command.DeleteOkCommand
