--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -19,3 +19,15 @@
 /board/read.do = com.java.board.command.ReadCommand
 /board/delete.do = com.java.board.command.DeleteCommand
 /board/deleteOk.do = com.java.board.command.DeleteOkCommand
+/board/update.do = com.java.board.command.UpdateCommand
+/board/updateOk.do = com.java.board.command.UpdateOkCommand
+
+#fileBoard
+/fileBoard/write.do = com.java.fileBoard.command.WriteCommand
+/fileBoard/writeOk.do = com.java.fileBoard.command.WriteOkCommand
+/fileBoard/list.do = com.java.fileBoard.command.ListCommand
+/fileBoard/read.do = com.java.fileBoard.command.ReadCommand
+/fileBoard/delete.do = com.java.fileBoard.command.DeleteCommand
+/fileBoard/deleteOk.do = com.java.fileBoard.command.DeleteOkCommand
+/fileBoard/update.do = com.java.fileBoard.command.UpdateCommand
+/fileBoard/updateOk.do = com.java.fileBoard.command.UpdateOkCommand
