--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -17,3 +17,6 @@
 /board/writeOk.do = com.java.board.command.WriteOkCommand
 /board/list.do = com.java.board.command.ListCommand
 /board/read.do = com.java.board.command.ReadCommand
+/board/deleteOk.do = com.java.board.command.DeleteOkCommand
+/board/update.do = com.java.board.command.UpdateCommand
+/board/updateOk.do = com.java.board.command.UpdateOkCommand
