파일첨부 & 다운로드

--- a/WebContent/WEB-INF/commandURI.properties
+++ b/WebContent/WEB-INF/commandURI.properties
@@ -31,3 +31,4 @@
 /fileBoard/deleteOk.do = com.java.fileBoard.command.DeleteOkCommand
 /fileBoard/update.do = com.java.fileBoard.command.UpdateCommand
 /fileBoard/updateOk.do = com.java.fileBoard.command.UpdateOkCommand
+/fileBoard/downLoad.do = com.java.fileBoard.command.DownLoadCommand
